making repository compatible with java 8