@@ -4,6 +4,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.apache.commons.lang3.StringUtils;
+
 import com.regexbuilder.ClassMatch.CharacterClass;
 
 
@@ -417,7 +419,7 @@ public class Group extends Node {
 			return true;
 		}
 		
-		if(renderSize().isBlank()) {
+		if(StringUtils.isBlank(renderSize())) {
 			return false;
 		}
 		
